# gtkmm-simple

./: CMakeLists.txt  compile_commands.json
src/: main.cpp
